objects/DM_Interest_Posting_Transaction__c.object
<CustomObject>
    <fields>
        <fullName>DM_Accrued_to_Investor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DM Accrued to Investor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DM_Amortization_Schedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DM Amortization Schedule</label>
        <referenceTo>DM_Repayment_Schedule__c</referenceTo>
        <relationshipLabel>DM Interest Posting Transaction</relationshipLabel>
        <relationshipName>DM_Interest_Posting_Transaction</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DM_Archive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DM Archive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DM_Balance__c</fullName>
        <label>DM Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_CL_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DM CL Contract</label>
        <referenceTo>DM_Loan_Account__c</referenceTo>
        <relationshipLabel>DM Interest Posting Transaction</relationshipLabel>
        <relationshipName>DM_Interest_Posting_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DM_Capitalization_Date__c</fullName>
        <label>DM Capitalization Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DM_Capitalized__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DM Capitalized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DM_Current_Interest_Accrued_On_Principal__c</fullName>
        <label>DM Current Interest Accrued On Principal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Current_Interest_Accrued__c</fullName>
        <label>DM Current Interest Accrued</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Custom_Field_1__c</fullName>
        <label>DM Custom Field 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DM_Custom_Field_2__c</fullName>
        <label>DM Custom Field 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DM_Custom_Field_3__c</fullName>
        <label>DM Custom Field 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DM_Discarded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DM Discarded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DM_Due_Amount__c</fullName>
        <label>DM Due Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>DM External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DM_IOA_Summary__c</fullName>
        <label>DM IOA Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DM_Interest_Paid__c</fullName>
        <label>DM Interest Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Interest_Posted__c</fullName>
        <label>DM Interest Posted</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Interest_Posting_Transaction_Snapshot__c</fullName>
        <label>DM Interest Posting Transaction Snapshot</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DM_Interest_Posting_Type__c</fullName>
        <label>DM Interest Posting Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Regular</fullName>
                </value>
                <value>
                    <fullName>Excess PayOff</fullName>
                </value>
                <value>
                    <fullName>Interest Adjustment</fullName>
                </value>
                <value>
                    <fullName>IOA on IOA</fullName>
                </value>
                <value>
                    <fullName>IOA on Unpaid Principal/Interest</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DM_Interest_Rate__c</fullName>
        <label>DM Interest Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Interest_Remaining__c</fullName>
        <label>DM Interest Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Interest_Waived__c</fullName>
        <label>DM Interest Waived</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Interest_unPaid__c</fullName>
        <label>DM Interest unPaid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Is_Billed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DM Is Billed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DM_Last_Accrual_Date__c</fullName>
        <label>DM Last Accrual Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DM_Level__c</fullName>
        <label>DM Level</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Master_Archive_Object__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DM Master Archive Object</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DM_Paid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DM Paid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DM_Payment_Amount__c</fullName>
        <label>DM Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Payment_Date__c</fullName>
        <label>DM Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DM_Posted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DM Posted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DM_Principal_Paid__c</fullName>
        <label>DM Principal Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Principal_Posted__c</fullName>
        <label>DM Principal Posted</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Principal_Remaining__c</fullName>
        <label>DM Principal Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Reversed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DM Reversed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DM_Status__c</fullName>
        <label>DM Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DM_Summary_Record_Id__c</fullName>
        <label>DM Summary Record Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DM_Summary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DM Summary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DM_Transaction_Creation_Date__c</fullName>
        <label>DM Transaction Creation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DM_Transaction_Due_Date__c</fullName>
        <label>DM Transaction Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DM_Transaction_Posting_Date__c</fullName>
        <label>DM Transaction Posting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DM_Transaction_Time__c</fullName>
        <label>DM Transaction Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Parent_Interest_Posting_Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Interest Posting Transaction</label>
        <referenceTo>loan__Interest_Posting_Transaction__c</referenceTo>
        <relationshipLabel>DM Interest Posting Transaction</relationshipLabel>
        <relationshipName>DM_Interest_Posting_Transaction</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>DM Interest Posting Transaction</label>
    <nameField>
        <label>DM  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DM Interest Posting Transaction</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>